--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -76,7 +76,6 @@ body
 	}
 	.row-fluid 
 	{
-		width: 979px;
 		margin: auto;
 	}
 }
@@ -146,7 +145,7 @@ body
 	}
 	
 }
-@media (min-width:768px) and (max-width: 979px)
+@media (min-width:767px) and (max-width: 979px)
 {
 	.icon-remove 
 	{
@@ -171,36 +170,24 @@ body
 	bottom: 0;
 	height: 31px;
 }
-@media (min-width: 769px) and (max-width: 979px)
-{
-	.navbar-fixed-top
-	{
-		
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-}
-@media (min-width: 768px) and (max-width: 979px)
+
+@media (min-width: 767px) and (max-width: 979px)
 {
 	.navbar-fixed-bottom .navbar-inner
 	{
 		padding: 0px;
 		padding-left: 5px;
-		margin-left: -20px;
-		margin-right: -20px;
 	}
 }
-@media (min-width: 768px) and (max-width: 979px)
+@media (min-width: 767px) and (max-width: 979px)
 {
 	.navbar-fixed-top .navbar-inner
 	{
 		padding: 0px;
 		padding-left: 5px;
-		margin-left: -20px;
-		margin-right: -20px;
 	}
 }
-@media (min-width: 480px) and (max-width: 768px)
+@media (min-width: 480px) and (max-width: 767px)
 {
 	.navbar-fixed-top .navbar-inner
 	{
@@ -223,6 +210,28 @@ body
 .fb_iframe_widget 
 {
 	margin-bottom: 40px;
+}
+@media (min-width: 850px) and (max-width: 926px)
+{
+	.main_page_facebook .fb_iframe_widget 
+	{
+	margin-left: -9%;
+	}
+}
+
+@media (min-width: 767px) and (max-width: 850px)
+{
+	.main_page_facebook .fb_iframe_widget 
+	{
+	margin-left: -17%;
+	}
+}
+@media (min-width: 767px) and (max-width: 979px)
+{
+	.showroom_facebook .fb_iframe_widget 
+	{
+	margin-left: -30%;
+	}
 }
 .fb-like.fb_edge_widget_with_comment.fb_iframe_widget 
 {
@@ -334,7 +343,13 @@ div.input-prepend
 
 .color_box_beige 
 {
-	background: beige url(color-pallet-shade.png) repeat-x 0 0;
+	background: #F5DEB3;
+	background: -moz-linear-gradient(top, white -60%, #F5DEB3 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,#F5DEB3));
+	background: -webkit-linear-gradient(top, white -60%,#F5DEB3 100%);
+	background: -o-linear-gradient(top, white -60%,#F5DEB3 100%);
+	background: -ms-linear-gradient(top, white -60%,#F5DEB3 100%);
+	background: linear-gradient(top, white -60%,#F5DEB3 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -343,7 +358,13 @@ div.input-prepend
 }
 .color_box_black 
 {
-	background: black url(color-pallet-shade.png) repeat-x 0 0;
+	background: black;
+	background: -moz-linear-gradient(top, white -60%, black 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,black));
+	background: -webkit-linear-gradient(top, white -60%,black 100%);
+	background: -o-linear-gradient(top, white -60%,black 100%);
+	background: -ms-linear-gradient(top, white -60%,black 100%);
+	background: linear-gradient(top, white -60%,black 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -352,7 +373,13 @@ div.input-prepend
 }
 .color_box_blue 
 {
-	background: blue url(color-pallet-shade.png) repeat-x 0 0;
+	background: blue;
+	background: -moz-linear-gradient(top, white -60%, blue 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,blue));
+	background: -webkit-linear-gradient(top, white -60%,blue 100%);
+	background: -o-linear-gradient(top, white -60%,blue 100%);
+	background: -ms-linear-gradient(top, white -60%,blue 100%);
+	background: linear-gradient(top, white -60%,blue 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -361,7 +388,13 @@ div.input-prepend
 }
 .color_box_bronze 
 {
-	background: #CD7F32 url(color-pallet-shade.png) repeat-x 0 0;
+	background: #cd7f32;
+	background: -moz-linear-gradient(top, white -60%, #cd7f32 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,#cd7f32));
+	background: -webkit-linear-gradient(top, white -60%,#cd7f32 100%);
+	background: -o-linear-gradient(top, white -60%,#cd7f32 100%);
+	background: -ms-linear-gradient(top, white -60%,#cd7f32 100%);
+	background: linear-gradient(top, white -60%,#cd7f32 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -370,7 +403,13 @@ div.input-prepend
 }
 .color_box_brown 
 {
-	background: #6F4E37 url(color-pallet-shade.png) repeat-x 0 0;
+	background: #6F4E37;
+	background: -moz-linear-gradient(top, white -60%, #6F4E37 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,#6F4E37));
+	background: -webkit-linear-gradient(top, white -60%,#6F4E37 100%);
+	background: -o-linear-gradient(top, white -60%,#6F4E37 100%);
+	background: -ms-linear-gradient(top, white -60%,#6F4E37 100%);
+	background: linear-gradient(top, white -60%,#6F4E37 100%);	
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -379,7 +418,13 @@ div.input-prepend
 }
 .color_box_gold 
 {
-	background: gold url(color-pallet-shade.png) repeat-x 0 0;
+	background: #EEC900;
+	background: -moz-linear-gradient(top, white -60%, #EEC900 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,#EEC900));
+	background: -webkit-linear-gradient(top, white -60%,#EEC900 100%);
+	background: -o-linear-gradient(top, white -60%,#EEC900 100%);
+	background: -ms-linear-gradient(top, white -60%,#EEC900 100%);
+	background: linear-gradient(top, white -60%,#EEC900 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -388,7 +433,13 @@ div.input-prepend
 }
 .color_box_green 
 {
-	background: green url(color-pallet-shade.png) repeat-x 0 0;
+	background: green;
+	background: -moz-linear-gradient(top, white -60%, green 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,green));
+	background: -webkit-linear-gradient(top, white -60%,green 100%);
+	background: -o-linear-gradient(top, white -60%,green 100%);
+	background: -ms-linear-gradient(top, white -60%,green 100%);
+	background: linear-gradient(top, white -60%,green 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -397,7 +448,13 @@ div.input-prepend
 }
 .color_box_grey 
 {
-	background: grey url(color-pallet-shade.png) repeat-x 0 0;
+	background: grey;
+	background: -moz-linear-gradient(top, white -60%, grey 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,grey));
+	background: -webkit-linear-gradient(top, white -60%,grey 100%);
+	background: -o-linear-gradient(top, white -60%,grey 100%);
+	background: -ms-linear-gradient(top, white -60%,grey 100%);
+	background: linear-gradient(top, white -60%,grey 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -406,7 +463,13 @@ div.input-prepend
 }
 .color_box_maroon 
 {
-	background: maroon url(color-pallet-shade.png) repeat-x 0 0;
+	background: maroon;
+	background: -moz-linear-gradient(top, white -60%, maroon 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,maroon));
+	background: -webkit-linear-gradient(top, white -60%,maroon 100%);
+	background: -o-linear-gradient(top, white -60%,maroon 100%);
+	background: -ms-linear-gradient(top, white -60%,maroon 100%);
+	background: linear-gradient(top, white -60%,maroon 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -415,7 +478,13 @@ div.input-prepend
 }
 .color_box_orange 
 {
-	background: orange url(color-pallet-shade.png) repeat-x 0 0;
+	background: #FF6600;
+	background: -moz-linear-gradient(top, white -60%, #FF6600 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,#FF6600));
+	background: -webkit-linear-gradient(top, white -60%,#FF6600 100%);
+	background: -o-linear-gradient(top, white -60%,#FF6600 100%);
+	background: -ms-linear-gradient(top, white -60%,#FF6600 100%);
+	background: linear-gradient(top, white -60%,#FF6600 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -424,7 +493,13 @@ div.input-prepend
 }
 .color_box_pink 
 {
-	background: pink url(color-pallet-shade.png) repeat-x 0 0;
+	background: #FF00CC;
+	background: -moz-linear-gradient(top, white -60%, #FF00CC 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,#FF00CC));
+	background: -webkit-linear-gradient(top, white -60%,#FF00CC 100%);
+	background: -o-linear-gradient(top, white -60%,#FF00CC 100%);
+	background: -ms-linear-gradient(top, white -60%,#FF00CC 100%);
+	background: linear-gradient(top, white -60%,#FF00CC 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -433,7 +508,13 @@ div.input-prepend
 }
 .color_box_purple 
 {
-	background: purple url(color-pallet-shade.png) repeat-x 0 0;
+	background: purple;
+	background: -moz-linear-gradient(top, white -60%, purple 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,purple));
+	background: -webkit-linear-gradient(top, white -60%,purple 100%);
+	background: -o-linear-gradient(top, white -60%,purple 100%);
+	background: -ms-linear-gradient(top, white -60%,purple 100%);
+	background: linear-gradient(top, white -60%,purple 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -442,7 +523,13 @@ div.input-prepend
 }
 .color_box_red 
 {
-	background: red url(color-pallet-shade.png) repeat-x 0 0;
+	background: red;
+	background: -moz-linear-gradient(top, white -60%, red 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,red));
+	background: -webkit-linear-gradient(top, white -60%,red 100%);
+	background: -o-linear-gradient(top, white -60%,red 100%);
+	background: -ms-linear-gradient(top, white -60%,red 100%);
+	background: linear-gradient(top, white -60%,red 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -451,7 +538,13 @@ div.input-prepend
 }
 .color_box_silver 
 {
-	background: silver url(color-pallet-shade.png) repeat-x 0 0;
+	background: silver;
+	background: -moz-linear-gradient(top, white -60%, silver 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,silver));
+	background: -webkit-linear-gradient(top, white -60%,silver 100%);
+	background: -o-linear-gradient(top, white -60%,silver 100%);
+	background: -ms-linear-gradient(top, white -60%,silver 100%);
+	background: linear-gradient(top, white -60%,silver 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -460,7 +553,13 @@ div.input-prepend
 }
 .color_box_white 
 {
-	background: white url(color-pallet-shade.png) repeat-x 0 0;
+	background: white;
+	background: -moz-linear-gradient(top, white -60%, white 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,white));
+	background: -webkit-linear-gradient(top, white -60%,white 100%);
+	background: -o-linear-gradient(top, white -60%,white 100%);
+	background: -ms-linear-gradient(top, white -60%,white 100%);
+	background: linear-gradient(top, white -60%,white 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -469,7 +568,13 @@ div.input-prepend
 }
 .color_box_yellow 
 {
-	background: yellow url(color-pallet-shade.png) repeat-x 0 0;
+	background: yellow;
+	background: -moz-linear-gradient(top, white -60%, yellow 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(-60%,white), color-stop(100%,yellow));
+	background: -webkit-linear-gradient(top, white -60%,yellow 100%);
+	background: -o-linear-gradient(top, white -60%,yellow 100%);
+	background: -ms-linear-gradient(top, white -60%,yellow 100%);
+	background: linear-gradient(top, white -60%,yellow 100%);
 	width: 40px;
 	height: 20px;
 	border-radius: 5px;
@@ -611,6 +716,13 @@ div.input-prepend
 	margin-bottom: 25px;
 
 }
+@media (min-width: 767px) and (max-width: 850px)
+{
+	.main_page_browse_by 
+	{
+		margin-right: 18px;	
+	}
+}
 
 .span12.main_page_browse 
 {
@@ -625,7 +737,14 @@ div.input-prepend
 	box-shadow: 2px 2px 5px #888888;
 	border: solid 1px #d7d7d7;
 }
-
+.row
+{
+	a:hover
+	{
+		background: inherit;
+		color: black;
+	}
+}
 .browse_body_type 
 {
 	text-align: center;
@@ -633,11 +752,6 @@ div.input-prepend
 	{
 		width: 15%;
 		display: inline-table;
-	}
-	a:hover
-	{
-		background: inherit;
-		color: black;
 	}
 }
 @media (max-width: 480px)
@@ -654,6 +768,17 @@ div.input-prepend
 		width: 48%;
 	}
 }
+.span4.showroom_browse .browse_maker
+{
+	a
+	{
+		display: inline-table;
+		.image_border
+		{
+			width: 65px;
+		}
+	}
+}
 
 .browse_makers 
 {
@@ -663,11 +788,6 @@ div.input-prepend
 	{
 		width: 10%;
 		display: inline-table;
-	}
-	a:hover
-	{
-		background: inherit;
-		color: black;
 	}
 }
 @media(max-width: 512px)
@@ -689,19 +809,8 @@ div.input-prepend
 		}
 	}
 }
-.browse_maker
-{
-	a 
-	{
-		display: inline-table;
-		width: 24%;
-		.image_border
-		{
-			width: 100px;
-		}
-	}
-}
-@media (max-width: 768px)
+
+@media (max-width: 767px)
 {
 	.latest_bikes .browse_maker
 	{
@@ -722,6 +831,12 @@ div.input-prepend
 	a 
 	{
 		width: 40%;
+		display: inline-table;
+		width: 24%;
+		.image_border
+		{
+			width: 100px;
+		}
 	}
 }
 
@@ -760,6 +875,16 @@ div.input-prepend
 	a.manage-ad:hover
 	{
 		background: inherit;
+	}
+	.create-ad:hover 
+	{
+		background: #ffad5c;
+		background: -moz-linear-gradient(top, #ff8533 0%, #ffad5c 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ff8533), color-stop(100%,#ffad5c));
+		background: -webkit-linear-gradient(top, #ff8533 0%,#ffad5c 100%);
+		background: -o-linear-gradient(top, #ff8533 0%,#ffad5c 100%);
+		background: -ms-linear-gradient(top, #ff8533 0%,#ffad5c 100%);
+		background: linear-gradient(top, #ff8533 0%,#ffad5c 100%);
 	}
 }
 
@@ -1108,7 +1233,7 @@ div.search_result_div a
 	}
 	.row-fluid 
 	{
-		width: 100%;
+		width: 99%;
 		margin-left: 0%;
 	}
 }
@@ -1204,6 +1329,7 @@ div.search_result_div a
 	img
 	{
 		max-height: 280px;
+		margin-top: 20px;
 	}
 }
 
@@ -1297,56 +1423,7 @@ div#bike_info.span6
 	width: 80%;
 }
 
-//----------------------trying logo-------------------------------------------------
-#z
-{
-	background: rgb(52, 170, 66) url(color-pallet-shade.png) repeat-x 0 0;
-	margin-top: -20px;
-	height: 70px;
-	box-shadow: 10px 10px 10px #888888;
-	border-radius: 50px;
-	padding-top: 5px;
-	padding-right: 15px;
-	padding-left: 15px;
-	padding-bottom: 30px;
-	width: 105px;
-	position: relative;
-}
-.b 
-{
-	background: rgba(0, 109, 188, 0.95);
-	padding: 20px;
-	margin-top: 0px;
-	border-radius: 5px;
-	margin-right: -50px;
-	margin-left: 20px;
-	box-shadow: 3px 3px 3px #888888;
-	position: absolute;
-}
-.c
-{
-	background: rgba(218, 37, 37, 0.54) url(color-pallet-shade.png) repeat-x 0 0;
-	margin-left: -35px;
-	padding: 10px;
-	padding-left:15px;
-	font-family: arail;
-	font-size: 25px;
-	color: white;
-	width: 120px;
-	box-shadow: 3px 3px 3px #888888;
-	border-radius: 5px;
-}
-.a 
-{
-	background: rgba(241, 238, 238, 0.93) url(color-pallet-shade.png) repeat-x 0 0;
-	height: 135px;
-	width: 65px;
-	position: absolute;
-	left: 38%;
-	top: -12px;
-	box-shadow: 5px 5px 5px #888888;
-	border-radius: 5px;
-}
+//---------------------- logo-------------------------------------------------
 #image_logo 
 {
 	
