--- a/app/views/bike_specs/showroom.html.erb
+++ b/app/views/bike_specs/showroom.html.erb
@@ -48,26 +48,29 @@
     </div> 
   </div>
   <div class = "span4 showroom_browse">
-    <div class = "legen">Browse By: Top Makers</div>
+    <div class = "legen">Browse By: Makers</div>
       <div class= "browse_maker">
-        
-          <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "67x62"%></div></a>
-          <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "67x62"%></div></a>
-        
-        
-          <a href = '<%=bike_specs_path(make: "Hyosung")%>' title ="Bike Showroom Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' title ="Bike Showroom Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "Suzuki")%>' title ="Bike Showroom Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "67x62"%></div></a>
-          <a href = '<%=bike_specs_path(make: "TVS")%>' title ="Bike Showroom TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "67x62"%></div></a>
-        
-        
-          <a href = '<%=bike_specs_path(make: "Yamaha")%>' title ="Bike Showroom Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "67x62"%></div></a>
           
+        <a href = '<%=bike_specs_path(make: "Anna-Lifan")%>' title ="Bike Showroom Anna-Lifan"><div class= "image_border"><%= image_tag "anna-lifan.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Bajaj")%>' title ="Bike Showroom Bajaj"><div class= "image_border"><%=image_tag "bajaj.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Daelim")%>' title ="Bike Showroom Daelim"><div class= "image_border"><%= image_tag "daelim.jpg", size: "65x62"%></div></a>
+        
+        <a href = '<%=bike_specs_path(make: "Demak")%>' title ="Bike Showroom Demak"><div class= "image_border"><%= image_tag "demak.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Hero")%>' title ="Bike Showroom Hero"><div class= "image_border"><%= image_tag "hero-honda.jpg", size: "65x62"%></div></a>
+        <a href = "<%=bike_specs_path(make: 'Honda')%>" title ="Bike Showroom Honda"><div class= "image_border"><%= image_tag "honda.jpg", size: "65x62"%></div></a>
+              
+        <a href = '<%=bike_specs_path(make: "Hyosung")%>' title ="Bike Showroom Hyosung"><div class= "image_border"><%= image_tag "hyosung.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Kawasaki")%>' title ="Bike Showroom Kawasaki"><div class= "image_border"><%= image_tag "kawasaki.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "KTM")%>' title ="Bike Showroom KTM"><div class= "image_border"><%= image_tag "ktm.jpg", size: "65x62"%></div></a>
+
+        <a href = '<%=bike_specs_path(make: "Mahindra")%>' title ="Bike Showroom Mahindra"><div class= "image_border"><%= image_tag "mahindra.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Royal Enfield")%>' title ="Bike Showroom Royal Enfield"><div class= "image_border"><%= image_tag "royal-enfield.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Suzuki")%>' title ="Bike Showroom Suzuki"><div class= "image_border"><%= image_tag "suzuki.jpg", size: "65x62"%></div></a>
+        
+        <a href = '<%=bike_specs_path(make: "SYM")%>' title ="Bike Showroom SYM"><div class= "image_border"><%= image_tag "sym.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "TVS")%>' title ="Bike Showroom TVS"><div class= "image_border"><%= image_tag "tvs.jpg", size: "65x62"%></div></a>
+        <a href = '<%=bike_specs_path(make: "Yamaha")%>' title ="Bike Showroom Yamaha"><div class= "image_border"><%= image_tag "yamaha.jpg", size: "65x62"%></div></a>
           
-          
-         
       </div>  
     </div>
     <div class = "span4">
@@ -87,8 +90,10 @@
         </div>  
       
     </div>
-    <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts" data-width="310" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true">
+    <div class= "showroom_facebook">
+      <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts" data-width="310" data-show-faces="true" data-stream="false" data-show-border="true" data-header="true">
       </div>
+    </div>
   </div>
 </div>
 
