--- a/app/views/bikes/main_page.html.erb
+++ b/app/views/bikes/main_page.html.erb
@@ -50,8 +50,10 @@
         </div><!--main_page_browse_by-->
       </div>
     </div>
-    <div id= "facebook_page" class= "span4">
-      <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts" data-width="292" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
+    <div class = "main_page_facebook">
+      <div id= "facebook_page" class= "span4">
+        <div class="fb-like-box" data-href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts" data-width="292" data-height="405" data-show-faces="true" data-stream="true" data-show-border="true" data-header="false"></div>
+      </div>
     </div>
   </div><!--row-->
 </div><!--span12-->
