image title, cursor pinter bikes for sale

--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -12,7 +12,7 @@
           <p>We all love riding our bikes. It is the most efficient way to travel in Nepal. There seems to be thousands of people trying to buy and sell their bike at this very moment, but no proper infrastructure to cater them all together. Bikes.bechnu.com was built with sole purpose to help people get highest price while selling them and lowest price while buying them.</p>
           <p> We want to make selling and buying your bikes effortless.</p>
           <hr>
-          <p>Drop us an email at <a href="mailto:contactus@bikes.bechnu.com">contactus@bikes.bechnu.com</a> or facebook <a href="http://facebook.com/bikesBechnu" target="_blank">BikesBechnu</a>.
+          <p>Drop us an email at <a href="mailto:contactus@bikes.bechnu.com">contactus@bikes.bechnu.com</a> or facebook <a href="https://www.facebook.com/pages/BikesBechnu/478017662293136?fref=ts/" target="_blank">BikesBechnu</a>.
         </div>    
       </section>
       <section class="row team">
