--- a/app/views/bikes/_bikes.html.erb
+++ b/app/views/bikes/_bikes.html.erb
@@ -17,7 +17,7 @@
             <div class="row">
               <div class="span9">
                 <div class = "ad_title">
-                  <b><a id = "title" href = "<%= bike_path(bike) %>/"> <%= bike.year %>  <%= bike.make %>  <%= bike.model %>  <%= bike.variant %></a></b>
+                  <b><a id = "title" href = "<%= bike_path(bike) %>"> <%= bike.year %>  <%= bike.make %>  <%= bike.model %>  <%= bike.variant %></a></b>
                 </div>
                 <div class="row">
                   <div class="span12">
