--- a/app/views/users/_side_bar.html.erb
+++ b/app/views/users/_side_bar.html.erb
@@ -1,4 +1,4 @@
-<a href= "<%=bike_path(@bike)%>/">
+<a href= "<%=bike_path(@bike)%>">
                  <table>
                     <tr>
                       <td><% if !@bike.pictures.nil?%>
