--- a/app/views/bike_specs/index.html.erb
+++ b/app/views/bike_specs/index.html.erb
@@ -43,10 +43,10 @@
                     <%= pluralize(@bikes.count, 'Match')%>
                     <select class="sort_select">
                         <option value= "1">Sort By: Latest</option>
-                        <option value= "2">Sort By: Price(High to Low)</option>
-                        <option value = "3">Sort By: Price(Low to High)</option>
-                        <option value= "4">Sort By: Year Made(High to Low)</option>
-                        <option value = "5">Sort By: Year Made(Low to High)</option>
+                        <option value= "2">Sort By: Price (High to Low)</option>
+                        <option value = "3">Sort By: Price (Low to High)</option>
+                        <option value= "4">Sort By: Year (High to Low)</option>
+                        <option value = "5">Sort By: Year (Low to High)</option>
                     </select>
                 </div>
                 <div class = "bikes_sort">
